feat: surface scm summaries in desktop
